# ChangeLog for games-emulation/dosbox
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/dosbox/ChangeLog,v 1.11 2004/06/24 22:25:37 agriffis Exp $

  21 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> dosbox-0.61.ebuild:
  Well, it works, but isn't "stable" on amd64 so back to ~ it goes.
  amd64 users will need to keyword locally for this version.  (bugs #52274
  and #52276)  dosbox-cvs is recommended for amd64 users until the next
  release from upstream.

  10 Jun 2004; Hanno Boeck <hanno@gentoo.org> +files/dosbox_gcc34.gz,
  dosbox-0.61.ebuild:
  Fix for gcc 3.4.

  05 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> dosbox-0.61.ebuild:
  png isn't optional, more alsa config stuff

  11 Feb 2004; David Holm <dholm@gentoo.org> dosbox-0.61.ebuild:
  Added to ~ppc.

*dosbox-0.61 (03 Feb 2004)

  03 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> dosbox-0.61.ebuild:
  version bump

*dosbox-0.60 (16 Oct 2003)

  12 Dec 2003; Mike Frysinger <vapier@gentoo.org> :
  Add an alsa-1.0.0 patch to fix #35522.

  18 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> dosbox-0.60.ebuild:
  removed the depend on ncurses since we don't use the debugger; added
  src_compile

  16 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> dosbox-0.60.ebuild:
  version bump

  07 Aug 2003; Michael Sterrett <mr_bones_@gentoo.org> dosbox-0.58.ebuild:
  tidy ebuild

*dosbox-0.58 (15 Jul 2003)

  15 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #20561 + games.eclass support.

*dosbox-0.57 (31 Jan 2003)

  31 Jan 2003; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
  New package. Submitted by Dirk-Jan Heijs. 