@@ -1,10 +1,12 @@
-MD5 0ef2fd60dc5781d72b1a290452945642 dosbox-0.61.ebuild 1084
-MD5 7bb8a8751ef2fb0617d00126797e60f7 dosbox-0.60.ebuild 880
-MD5 6e4c88905ec735ea32946271c5bf5896 dosbox-0.58.ebuild 692
 MD5 ac3752ed790fa15ed10c22ac25d02fe1 ChangeLog 1699
 MD5 95e2b5bfd7767aeae061c77f7e1a055e metadata.xml 221
-MD5 f4257165581f9c2cb8e2a428f2ebeaae files/0.60-alsa-1.0.0.patch 721
-MD5 3df3072eb03de57f9e5aebcfb47f35a0 files/dosbox_gcc34.gz 655
+MD5 7bb8a8751ef2fb0617d00126797e60f7 dosbox-0.60.ebuild 880
+MD5 0ef2fd60dc5781d72b1a290452945642 dosbox-0.61.ebuild 1084
+MD5 6e4c88905ec735ea32946271c5bf5896 dosbox-0.58.ebuild 692
+MD5 830269e87f6676b451c1e463f80efc49 dosbox-0.62.ebuild 1085
+MD5 6c3131692034dda3f27046c037aabc58 files/digest-dosbox-0.61 63
 MD5 709911d69c3fb90908508f4c3116a07f files/digest-dosbox-0.58 63
 MD5 a15acc3d9f2a2d55bde29cf697f86297 files/digest-dosbox-0.60 63
-MD5 6c3131692034dda3f27046c037aabc58 files/digest-dosbox-0.61 63
+MD5 f4257165581f9c2cb8e2a428f2ebeaae files/0.60-alsa-1.0.0.patch 721
+MD5 3df3072eb03de57f9e5aebcfb47f35a0 files/dosbox_gcc34.gz 655
+MD5 6dc808f58930f5161dd3c2644f2e8d59 files/digest-dosbox-0.62 63
