@@ -1,6 +1,11 @@
 # ChangeLog for games-emulation/dosbox
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/dosbox/ChangeLog,v 1.11 2004/06/24 22:25:37 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/dosbox/ChangeLog,v 1.12 2004/09/30 10:44:13 mr_bones_ Exp $
+
+*dosbox-0.62 (30 Sep 2004)
+
+  30 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org> +dosbox-0.62.ebuild:
+  version bump
 
   21 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> dosbox-0.61.ebuild:
   Well, it works, but isn't "stable" on amd64 so back to ~ it goes.
